tests/machine/x/cobol/str_builtin.error
cobc: exit status 1
/workspace/mochi/tests/machine/x/cobol/str_builtin.cob:7: error: syntax error, unexpected USING
/workspace/mochi/tests/machine/x/cobol/str_builtin.cob:8: error: 'STR_RES' is not defined
/workspace/mochi/tests/machine/x/cobol/str_builtin.cob:7: error: 'STR' is not defined

