tests/machine/x/cobol/str_builtin.cob
       IDENTIFICATION DIVISION.
       PROGRAM-ID. STR-BUILTIN.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       01 TMP PIC 9(9) VALUE 0.
       PROCEDURE DIVISION.
       DISPLAY 123
       STOP RUN.
